--- a/Marindeck/View/Settings/Theme/ThemeTableViewCell.xib
+++ b/Marindeck/View/Settings/Theme/ThemeTableViewCell.xib
@@ -47,6 +47,9 @@
                                     <color key="titleColor" systemColor="labelColor"/>
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
                                 </state>
+                                <connections>
+                                    <action selector="apply" destination="KGk-i7-Jjw" eventType="touchUpInside" id="61v-rL-z0w"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="でふぉると" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRD-xf-dXF">
                                 <rect key="frame" x="79" y="39" width="191" height="20.5"/>
