--- a/Marindeck/View/Settings/Theme/ThemeTableViewCell.xib
+++ b/Marindeck/View/Settings/Theme/ThemeTableViewCell.xib
@@ -22,13 +22,14 @@
                         <rect key="frame" x="8" y="4" width="378" height="94"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Marindeck_logo" translatesAutoresizingMaskIntoConstraints="NO" id="wzk-j6-SbH">
-                                <rect key="frame" x="12" y="12" width="64" height="70"/>
+                                <rect key="frame" x="12" y="15" width="64" height="64"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="rUV-k9-jvq"/>
                                     <constraint firstAttribute="width" constant="64" id="tcs-rm-YT5"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="デフォルト" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AtK-Lk-1lw">
-                                <rect key="frame" x="80" y="16" width="190" height="21"/>
+                                <rect key="frame" x="86" y="16" width="184" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -52,7 +53,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="でふぉると" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRD-xf-dXF">
-                                <rect key="frame" x="79" y="39" width="191" height="20.5"/>
+                                <rect key="frame" x="86" y="39" width="184" height="20.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" systemColor="secondaryLabelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -62,15 +63,14 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="kRD-xf-dXF" firstAttribute="leading" secondItem="wzk-j6-SbH" secondAttribute="trailing" constant="3" id="0AA-Fq-4T0"/>
+                            <constraint firstItem="kRD-xf-dXF" firstAttribute="leading" secondItem="wzk-j6-SbH" secondAttribute="trailing" constant="10" id="0AA-Fq-4T0"/>
                             <constraint firstItem="uDO-nu-B6T" firstAttribute="leading" secondItem="AtK-Lk-1lw" secondAttribute="trailing" constant="4" id="2VX-r3-NPB"/>
                             <constraint firstAttribute="trailing" secondItem="uDO-nu-B6T" secondAttribute="trailing" constant="12" id="8iU-yB-qEr"/>
-                            <constraint firstAttribute="bottom" secondItem="wzk-j6-SbH" secondAttribute="bottom" constant="12" id="E3s-tj-HhO"/>
-                            <constraint firstItem="AtK-Lk-1lw" firstAttribute="leading" secondItem="wzk-j6-SbH" secondAttribute="trailing" constant="4" id="Hcm-yb-tVg"/>
+                            <constraint firstItem="AtK-Lk-1lw" firstAttribute="leading" secondItem="wzk-j6-SbH" secondAttribute="trailing" constant="10" id="Hcm-yb-tVg"/>
+                            <constraint firstItem="wzk-j6-SbH" firstAttribute="centerY" secondItem="69x-71-rIX" secondAttribute="centerY" id="K0p-R8-dq4"/>
                             <constraint firstItem="kRD-xf-dXF" firstAttribute="top" secondItem="AtK-Lk-1lw" secondAttribute="bottom" constant="2" id="LKn-Tm-o50"/>
                             <constraint firstItem="AtK-Lk-1lw" firstAttribute="top" secondItem="69x-71-rIX" secondAttribute="top" constant="16" id="Oz8-o9-Kh2"/>
                             <constraint firstItem="uDO-nu-B6T" firstAttribute="centerY" secondItem="69x-71-rIX" secondAttribute="centerY" id="ep9-kb-8xx"/>
-                            <constraint firstItem="wzk-j6-SbH" firstAttribute="top" secondItem="69x-71-rIX" secondAttribute="top" constant="12" id="hZE-go-ejy"/>
                             <constraint firstItem="wzk-j6-SbH" firstAttribute="leading" secondItem="69x-71-rIX" secondAttribute="leading" constant="12" id="tmp-DZ-3bb"/>
                             <constraint firstItem="uDO-nu-B6T" firstAttribute="leading" secondItem="kRD-xf-dXF" secondAttribute="trailing" constant="4" id="vZs-bN-riB"/>
                         </constraints>
