--- a/Marindeck/View/Settings/Theme/ThemeTableViewCell.xib
+++ b/Marindeck/View/Settings/Theme/ThemeTableViewCell.xib
@@ -11,18 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="102" id="KGk-i7-Jjw" customClass="ThemeTableViewCell" customModule="Marindeck" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="394" height="102"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="92" id="KGk-i7-Jjw" customClass="ThemeTableViewCell" customModule="Marindeck" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="394" height="92"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="394" height="102"/>
+                <rect key="frame" x="0.0" y="0.0" width="394" height="92"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="69x-71-rIX">
-                        <rect key="frame" x="8" y="4" width="378" height="94"/>
+                        <rect key="frame" x="8" y="4" width="378" height="84"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Marindeck_logo" translatesAutoresizingMaskIntoConstraints="NO" id="wzk-j6-SbH">
-                                <rect key="frame" x="12" y="15" width="64" height="64"/>
+                                <rect key="frame" x="12" y="10" width="64" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="rUV-k9-jvq"/>
                                     <constraint firstAttribute="width" constant="64" id="tcs-rm-YT5"/>
@@ -35,7 +35,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uDO-nu-B6T">
-                                <rect key="frame" x="274" y="31" width="92" height="32"/>
+                                <rect key="frame" x="274" y="26" width="92" height="32"/>
                                 <color key="backgroundColor" systemColor="systemTealColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="92" id="5Ge-Jh-N9n"/>
@@ -52,27 +52,27 @@
                                     <action selector="apply" destination="KGk-i7-Jjw" eventType="touchUpInside" id="61v-rL-z0w"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="でふぉると" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRD-xf-dXF">
-                                <rect key="frame" x="86" y="39" width="184" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="デスクトップ版Discordをモチーフにしたテーマです。明るすぎず暗すぎないDiscordのダークテーマが好きな方におすすめです" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRD-xf-dXF">
+                                <rect key="frame" x="86" y="39" width="184" height="17"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" systemColor="secondaryLabelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" systemColor="secondaryLabelColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="kRD-xf-dXF" firstAttribute="leading" secondItem="wzk-j6-SbH" secondAttribute="trailing" constant="10" id="0AA-Fq-4T0"/>
                             <constraint firstItem="uDO-nu-B6T" firstAttribute="leading" secondItem="AtK-Lk-1lw" secondAttribute="trailing" constant="4" id="2VX-r3-NPB"/>
+                            <constraint firstItem="kRD-xf-dXF" firstAttribute="leading" secondItem="wzk-j6-SbH" secondAttribute="trailing" constant="10" id="6Rx-kN-4UB"/>
                             <constraint firstAttribute="trailing" secondItem="uDO-nu-B6T" secondAttribute="trailing" constant="12" id="8iU-yB-qEr"/>
                             <constraint firstItem="AtK-Lk-1lw" firstAttribute="leading" secondItem="wzk-j6-SbH" secondAttribute="trailing" constant="10" id="Hcm-yb-tVg"/>
+                            <constraint firstItem="kRD-xf-dXF" firstAttribute="top" secondItem="AtK-Lk-1lw" secondAttribute="bottom" constant="2" id="JeM-M2-9Rv"/>
                             <constraint firstItem="wzk-j6-SbH" firstAttribute="centerY" secondItem="69x-71-rIX" secondAttribute="centerY" id="K0p-R8-dq4"/>
-                            <constraint firstItem="kRD-xf-dXF" firstAttribute="top" secondItem="AtK-Lk-1lw" secondAttribute="bottom" constant="2" id="LKn-Tm-o50"/>
                             <constraint firstItem="AtK-Lk-1lw" firstAttribute="top" secondItem="69x-71-rIX" secondAttribute="top" constant="16" id="Oz8-o9-Kh2"/>
+                            <constraint firstItem="uDO-nu-B6T" firstAttribute="leading" secondItem="kRD-xf-dXF" secondAttribute="trailing" constant="4" id="eGM-jQ-90a"/>
                             <constraint firstItem="uDO-nu-B6T" firstAttribute="centerY" secondItem="69x-71-rIX" secondAttribute="centerY" id="ep9-kb-8xx"/>
                             <constraint firstItem="wzk-j6-SbH" firstAttribute="leading" secondItem="69x-71-rIX" secondAttribute="leading" constant="12" id="tmp-DZ-3bb"/>
-                            <constraint firstItem="uDO-nu-B6T" firstAttribute="leading" secondItem="kRD-xf-dXF" secondAttribute="trailing" constant="4" id="vZs-bN-riB"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -92,7 +92,7 @@
                 <outlet property="iconView" destination="wzk-j6-SbH" id="Js7-aK-r8L"/>
                 <outlet property="titleLabel" destination="AtK-Lk-1lw" id="V27-lA-QzI"/>
             </connections>
-            <point key="canvasLocation" x="191.30434782608697" y="141.29464285714286"/>
+            <point key="canvasLocation" x="191.30434782608697" y="137.94642857142856"/>
         </tableViewCell>
     </objects>
     <resources>
